feat: add true streaming dialogue
